--- a/learnopgl/learnopgl.vcxproj.filters
+++ b/learnopgl/learnopgl.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="src\learnopgl.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\glad.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
