--- a/learnopgl/learnopgl.vcxproj
+++ b/learnopgl/learnopgl.vcxproj
@@ -595,6 +595,9 @@
   <ItemGroup>
     <Image Include="res\pic\awesomeface.png" />
     <Image Include="res\pic\container.jpg" />
+    <Image Include="res\pic\container2.png" />
+    <Image Include="res\pic\container2_specular.png" />
+    <Image Include="res\pic\matrix.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
