--- a/learnopgl/learnopgl.vcxproj.filters
+++ b/learnopgl/learnopgl.vcxproj.filters
@@ -1309,5 +1309,14 @@
     <Image Include="res\pic\awesomeface.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="res\pic\container2.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\pic\container2_specular.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\pic\matrix.jpg">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
