--- a/learnopgl/learnopgl.vcxproj
+++ b/learnopgl/learnopgl.vcxproj
@@ -304,6 +304,7 @@
     <None Include="res\shader\light_cube.vs" />
     <None Include="res\shader\lighting.vs" />
     <None Include="res\shader\lighting.fs" />
+    <None Include="res\shader\shadering_single.fs" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dependency\include\glm\common.hpp" />
