--- a/learnopgl/learnopgl.vcxproj.filters
+++ b/learnopgl/learnopgl.vcxproj.filters
@@ -427,6 +427,7 @@
     <None Include="res\shader\lighting.vs" />
     <None Include="res\shader\light_cube.vs" />
     <None Include="res\shader\light_cube.fs" />
+    <None Include="res\shader\shadering_single.fs" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\learnopgl.cpp">
