--- a/learnopgl/learnopgl.vcxproj.filters
+++ b/learnopgl/learnopgl.vcxproj.filters
@@ -425,9 +425,8 @@
     </None>
     <None Include="res\shader\lighting.fs" />
     <None Include="res\shader\lighting.vs" />
-    <None Include="res\shader\light_cube.vs" />
-    <None Include="res\shader\light_cube.fs" />
-    <None Include="res\shader\shadering_single.fs" />
+    <None Include="res\shader\fb.vs" />
+    <None Include="res\shader\fb.fs" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\learnopgl.cpp">
