--- a/learnopgl/learnopgl.vcxproj.filters
+++ b/learnopgl/learnopgl.vcxproj.filters
@@ -425,8 +425,8 @@
     </None>
     <None Include="res\shader\lighting.fs" />
     <None Include="res\shader\lighting.vs" />
-    <None Include="res\shader\fb.vs" />
-    <None Include="res\shader\fb.fs" />
+    <None Include="res\shader\sky.fs" />
+    <None Include="res\shader\sky.vs" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\learnopgl.cpp">
