--- a/learnopgl/learnopgl.vcxproj
+++ b/learnopgl/learnopgl.vcxproj
@@ -305,6 +305,7 @@
     <None Include="res\shader\lighting.vs" />
     <None Include="res\shader\lighting.fs" />
     <None Include="res\shader\shadering_single.fs" />
+    <None Include="res\shader\vs_offset.vs" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dependency\include\glm\common.hpp" />
