--- a/learnopgl/learnopgl.vcxproj.filters
+++ b/learnopgl/learnopgl.vcxproj.filters
@@ -428,6 +428,7 @@
     <None Include="res\shader\light_cube.vs" />
     <None Include="res\shader\light_cube.fs" />
     <None Include="res\shader\shadering_single.fs" />
+    <None Include="res\shader\vs_offset.vs" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\learnopgl.cpp">
