--- a/learnopgl/learnopgl.vcxproj
+++ b/learnopgl/learnopgl.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\stb_image.cpp" />
     <ClCompile Include="src\shader.cpp" />
+    <ClCompile Include="源.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="dependency\include\assimp\color4.inl" />
@@ -314,6 +315,10 @@
     <None Include="res\shader\depthshader.vs" />
     <None Include="res\shader\lighting.fs" />
     <None Include="res\shader\lighting.vs" />
+    <None Include="res\shader\light_cube.fs" />
+    <None Include="res\shader\light_cube.vs" />
+    <None Include="res\shader\s.fs" />
+    <None Include="res\shader\s.vs" />
     <None Include="res\shader\test_depth.fs" />
     <None Include="res\shader\test_depth.vs" />
   </ItemGroup>
