--- a/learnopgl/learnopgl.vcxproj
+++ b/learnopgl/learnopgl.vcxproj
@@ -320,8 +320,8 @@
     <None Include="res\shader\lighting.vs" />
     <None Include="res\shader\light_cube.fs" />
     <None Include="res\shader\light_cube.vs" />
-    <None Include="res\shader\s.fs" />
-    <None Include="res\shader\s.vs" />
+    <None Include="res\shader\blur.fs" />
+    <None Include="res\shader\blur.vs" />
     <None Include="res\shader\test_depth.fs" />
     <None Include="res\shader\test_depth.vs" />
   </ItemGroup>
