--- a/learnopgl/learnopgl.vcxproj.filters
+++ b/learnopgl/learnopgl.vcxproj.filters
@@ -486,6 +486,12 @@
     <None Include="res\shader\hdr.vs">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="res\shader\g.fs">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\shader\g.vs">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\learnopgl.cpp">
