--- a/learnopgl/learnopgl.vcxproj.filters
+++ b/learnopgl/learnopgl.vcxproj.filters
@@ -492,6 +492,12 @@
     <None Include="res\shader\g.vs">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="res\shader\ssao.fs">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\shader\ssao.vs">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\learnopgl.cpp">
